python-compiler/tests/snapshots/variables__reassignment.snap
---
source: tests/variables.rs
assertion_line: 34
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"

@float_format_string = private unnamed_addr constant [4 x i8] c"%f\0A\00", align 1

define i32 @main() {
entry:
  %x = alloca double, align 8
  store i64 10, ptr %x, align 4
  %x1 = load double, ptr %x, align 8
  %addtmp = fadd double %x1, 5.000000e+00
  store double %addtmp, ptr %x, align 8
  %x2 = load double, ptr %x, align 8
  %printf_call = call i32 (ptr, ...) @printf(ptr @float_format_string, double %x2)
  ret i32 0
}

declare i32 @printf(ptr, ...)
